<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_general">
        <ListPreference
            android:key="app_locale"
            android:title="@string/pref_app_locale_title"
            android:summary="@string/pref_app_locale_summary"
            android:entries="@array/locale_entries"
            android:entryValues="@array/locale_values"
            android:defaultValue="system" />
        <ListPreference
            android:key="app_theme"
            android:title="@string/pref_app_theme_title"
            android:summary="@string/pref_app_theme_summary"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:defaultValue="system" />
        <ListPreference
            android:key="app_accent"
            android:title="@string/pref_app_accent_title"
            android:summary="@string/pref_app_accent_summary"
            android:entries="@array/accent_entries"
            android:entryValues="@array/accent_values"
            android:defaultValue="cyan" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_server">
        <EditTextPreference
            android:key="server_url"
            android:title="@string/pref_server_url_title"
            android:summary="@string/pref_server_url_summary"
            android:defaultValue="https://syncserver.local" />
        <EditTextPreference
            android:key="api_path"
            android:title="@string/pref_api_path_title"
            android:summary="@string/pref_api_path_summary"
            android:defaultValue="/api/v1/ingest" />
        <EditTextPreference
            android:key="http_method"
            android:title="@string/pref_http_method_title"
            android:summary="@string/pref_http_method_summary"
            android:defaultValue="POST" />
        <EditTextPreference
            android:key="remote_config_url"
            android:title="@string/pref_remote_config_url_title"
            android:summary="@string/pref_remote_config_url_summary"
            android:defaultValue="" />
        <EditTextPreference
            android:key="remote_config_auth_header"
            android:title="@string/pref_remote_config_auth_header_title"
            android:summary="@string/pref_remote_config_auth_header_summary"
            android:defaultValue="" />
        <EditTextPreference
            android:key="remote_config_auth_value"
            android:title="@string/pref_remote_config_auth_value_title"
            android:summary="@string/pref_remote_config_auth_value_summary"
            android:defaultValue="" />
        <EditTextPreference
            android:key="remote_config_signature_header"
            android:title="@string/pref_remote_config_signature_header_title"
            android:summary="@string/pref_remote_config_signature_header_summary"
            android:defaultValue="" />
        <EditTextPreference
            android:key="remote_config_signature_secret"
            android:title="@string/pref_remote_config_signature_secret_title"
            android:summary="@string/pref_remote_config_signature_secret_summary"
            android:defaultValue="" />
        <EditTextPreference
            android:key="discovery_port"
            android:title="@string/pref_discovery_port_title"
            android:summary="@string/pref_discovery_port_summary"
            android:defaultValue="3000"
            android:inputType="number" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_auth_headers">
        <EditTextPreference
            android:key="client_id_header"
            android:title="@string/pref_client_id_header_title"
            android:summary="@string/pref_client_id_header_summary"
            android:defaultValue="x-clientid" />
        <EditTextPreference
            android:key="client_id_value"
            android:title="@string/pref_client_id_value_title"
            android:summary="@string/pref_client_id_value_summary"
            android:defaultValue="#XCLIENTID1" />
        <EditTextPreference
            android:key="auth_header"
            android:title="@string/pref_auth_header_title"
            android:summary="@string/pref_auth_header_summary"
            android:defaultValue="Authorization" />
        <EditTextPreference
            android:key="auth_prefix"
            android:title="@string/pref_auth_prefix_title"
            android:summary="@string/pref_auth_prefix_summary"
            android:defaultValue="Bearer " />
        <EditTextPreference
            android:key="accept_header"
            android:title="@string/pref_accept_header_title"
            android:summary="@string/pref_accept_header_summary"
            android:defaultValue="Accept" />
        <EditTextPreference
            android:key="accept_value"
            android:title="@string/pref_accept_value_title"
            android:summary="@string/pref_accept_value_summary"
            android:defaultValue="application/json" />
        <EditTextPreference
            android:key="content_type_header"
            android:title="@string/pref_content_type_header_title"
            android:summary="@string/pref_content_type_header_summary"
            android:defaultValue="Content-Type" />
        <EditTextPreference
            android:key="content_type_value"
            android:title="@string/pref_content_type_value_title"
            android:summary="@string/pref_content_type_value_summary"
            android:defaultValue="application/json" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_credentials">
        <EditTextPreference
            android:key="pin"
            android:title="@string/pref_pin_title"
            android:summary="@string/pref_pin_summary"
            android:defaultValue="#PIN1" />
        <EditTextPreference
            android:key="salt"
            android:title="@string/pref_salt_title"
            android:summary="@string/pref_salt_summary"
            android:defaultValue="#SALT" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_behavior">
        <SwitchPreferenceCompat
            android:key="enable_listener"
            android:title="@string/pref_enable_listener_title"
            android:summary="@string/pref_enable_listener_summary"
            android:defaultValue="true" />
        <SwitchPreferenceCompat
            android:key="enable_foreground_service"
            android:title="@string/pref_enable_foreground_title"
            android:summary="@string/pref_enable_foreground_summary"
            android:defaultValue="true" />
        <SwitchPreferenceCompat
            android:key="enable_boot_receiver"
            android:title="@string/pref_enable_boot_title"
            android:summary="@string/pref_enable_boot_summary"
            android:defaultValue="true" />
        <SwitchPreferenceCompat
            android:key="enable_socket_presence"
            android:title="@string/pref_enable_socket_title"
            android:summary="@string/pref_enable_socket_summary"
            android:defaultValue="true" />
        <SwitchPreferenceCompat
            android:key="notification_enabled"
            android:title="@string/pref_notification_title"
            android:summary="@string/pref_notification_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>
